--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -14,7 +14,9 @@
       </ion-slide>
     </ion-slides>
     <!-- =========>=>=>=> Filtro =========>=>=>=> -->
-    <div class="filter_place">
+    <div 
+      *ngIf="!selectdistancia"
+      class="filter_place">
       <ion-label
         *ngIf="isOpenLocation === false "
         (click)="changeFilterLocation()"
