filtroArtista: Se ajusta si se selecciona distancia

--- a/src/app/pages/artist/artist.page.html
+++ b/src/app/pages/artist/artist.page.html
@@ -14,7 +14,9 @@
   <!-- </div> -->
 
     <!-- =========>=>=>=> Filtro =========>=>=>=> -->
-    <div class="filter_place">
+    <div 
+      *ngIf="!selectdistancia"
+      class="filter_place">
       <ion-label id="filters" *ngIf="isOpenLocation === false " (click)="changeFilterLocation()">localidad</ion-label>
       <ion-label *ngIf="isOpenLocation" class="open_acordeon" (click)="changeFilterLocation()">localidad</ion-label>
       <img src="/assets/icon/exchange.png" alt="" />
