--- a/src/app/pages/events/events.page.scss
+++ b/src/app/pages/events/events.page.scss
@@ -168,7 +168,7 @@ ion-chip {
   position: relative;
   z-index: 50;
   width: 90%;
-  background-color: rgb(240, 240, 240);
+  background-color: var(--ion-color-light);
   padding: 16px;
   border-radius: 60px;
 }
@@ -185,7 +185,7 @@ ion-label {
   flex-direction: column;
   margin: 0 5% 5px 5%;
   z-index: 100;
-  background-color: #fff;
+  background-color: var(--ion-color-back);
   border-radius: 16px;
   -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
