--- a/src/app/pages/artist/artist.page.scss
+++ b/src/app/pages/artist/artist.page.scss
@@ -74,7 +74,7 @@
   position: relative;
   z-index: 50;
   width: 90%;
-  background-color: rgb(240, 240, 240);
+  background-color: var(--ion-color-light);
   padding: 16px;
   border-radius: 60px;
 }
@@ -91,7 +91,7 @@ ion-label {
   flex-direction: column;
   margin: 0 5% 5px 5%;
   z-index: 100;
-  background-color: #fff;
+  background-color: var(--ion-color-back);
   border-radius: 16px;
   -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
