--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -180,10 +180,12 @@ ion-label {
 
 .filter_name {
   padding: 15px 0 15px 15px;
-  font-weight: bold;
-  width: 100%;
   font-size: 0.95em;
   font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+
+.filter_name > span {
   font-weight: 700;
 }
 
@@ -220,8 +222,8 @@ ion-label {
   border-bottom-right-radius: 16px !important;
 }
 
-.open_acordeon {
-  color: #fc67ff;
+.open_filter {
+  color: #fc67ff !important;
 }
 
 ion-radio {
