--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -1,9 +1,9 @@
 <ion-content>
   <div class="container">
     <div class="slider_filter">
-      <div  class="slider_filter-title" >
-        <h1 id="home-menu" >Hola, soy domin<span>go!</span></h1>
-        <p id="home-menu" >
+      <div class="slider_filter-title">
+        <h1 id="home-menu">Hola, soy domin<span>go!</span></h1>
+        <p id="home-menu">
           y a partir de ahora seré tu guía. <br />
           ¿Descubrimos juntos un nuevo sitio?
         </p>
@@ -18,7 +18,7 @@
         <ion-label (click)="seeDepto()" *ngIf="deptoSave === null"
           >departamento</ion-label
         >
-        <img src="/assets/icon/exchange.png" alt="">
+        <img src="/assets/icon/exchange.png" alt="" />
         <ion-label
           class="distance_selected"
           (click)="seeDistance()"
@@ -31,6 +31,7 @@
           >distancia</ion-label
         >
       </div>
+
       <ion-list *ngIf="depto" class="depto_list">
         <ion-radio-group value="{{ deptoSelected }}">
           <ion-item
@@ -41,7 +42,10 @@
             <ion-text id="depto_list" *ngIf="deptoSelected !== depto.nombre"
               >{{ depto.nombre }}</ion-text
             >
-            <ion-text id="depto_list" class="depto_bold" *ngIf="deptoSelected === depto.nombre"
+            <ion-text
+              id="depto_list"
+              class="depto_bold"
+              *ngIf="deptoSelected === depto.nombre"
               >{{ depto.nombre }}</ion-text
             >
             <ion-radio
@@ -60,8 +64,13 @@
             *ngFor="let dis of optionDsitance"
             (click)="select(null, dis)"
           >
-            <ion-text id="home-menu" *ngIf="distanceSelected !== dis">{{ dis }} km</ion-text>
-            <ion-text id="home-menu" class="depto_bold" *ngIf="distanceSelected === dis"
+            <ion-text id="home-menu" *ngIf="distanceSelected !== dis"
+              >{{ dis }} km</ion-text
+            >
+            <ion-text
+              id="home-menu"
+              class="depto_bold"
+              *ngIf="distanceSelected === dis"
               >{{ dis }} km</ion-text
             >
             <ion-radio mode="ios" slot="end" value="{{ dis }}"></ion-radio>
@@ -73,42 +82,77 @@
 
     <div class="menu" *ngIf="deptoSelected != null || distanceSelected != null">
       <div class="div__menu">
-        <div id="home-menu" class="div__menu-izq" routerLink="/tabs/place">¿dónde ir?</div>
+        <div id="home-menu" class="div__menu-izq" routerLink="/tabs/place">
+          ¿dónde ir?
+        </div>
         <div id="home-menu" class="div__menu-izq" routerLink="/tabs/eat">
           ¿dónde<br />
           comer?
         </div>
-        <div id="home-menu" class="div__menu-izq" routerLink="/tabs/sleep">
-          ¿dónde<br />
-          dormir?
+        <div id="home-menu" class="div__menu-izq" routerLink="/tabs/artist">
+          artistas
         </div>
       </div>
       <div id="home-menu" class="div__menu">
-        <div id="home-menu" class="div__menu-der" routerLink="/tabs/events">¿qué hacer?</div>
-        <div id="home-menu" class="div__menu-der" routerLink="/tabs/artist">
-          Artistas
+        <div id="home-menu" class="div__menu-der" routerLink="/tabs/events">
+          ¿qué hacer?
+        </div>
+        <div id="home-menu" class="div__menu-der" routerLink="/tabs/sleep">
+          ¿dónde <br />
+          dormir?
+        </div>
+        <div class="div__menu-der" id="filter_null" (click)="presentAlert()">
+          Casa<br />
+          Dominga
         </div>
       </div>
     </div>
     <div class="menu" *ngIf="deptoSelected == null && distanceSelected == null">
       <div class="div__menu">
-        <div class="div__menu-izq" id="filter_null" (click)="presentAlert()">
+        <div
+          class="div__menu-izq"
+          id="filter_null_izq"
+          (click)="presentAlert()"
+        >
           ¿dónde ir?
         </div>
-        <div class="div__menu-izq" id="filter_null" (click)="presentAlert()">
+        <div
+          class="div__menu-izq"
+          id="filter_null_izq"
+          (click)="presentAlert()"
+        >
           ¿dónde<br />
           comer?
         </div>
-        <div class="div__menu-izq" id="filter_null" (click)="presentAlert()">
-          ¿dónde<br />
-          dormir?
+        <div
+          class="div__menu-izq"
+          id="filter_null_izq"
+          (click)="presentAlert()"
+        >
+          artistas
         </div>
       </div>
       <div class="div__menu">
-        <div class="div__menu-der" id="filter_null" (click)="presentAlert()">
+        <div
+          class="div__menu-der"
+          id="filter_null_der"
+          (click)="presentAlert()"
+        >
           ¿qué hacer?
         </div>
-        <div class="div__menu-der" id="filter_null" (click)="presentAlert()">
+        <div
+          class="div__menu-der"
+          id="filter_null_der"
+          (click)="presentAlert()"
+        >
+          ¿dónde<br />
+          dormir?
+        </div>
+        <div
+          class="div__menu-der"
+          id="filter_null_der"
+          (click)="presentAlert()"
+        >
           Casa<br />
           Dominga
         </div>
