--- a/src/app/pages/home-menu/home-menu.page.scss
+++ b/src/app/pages/home-menu/home-menu.page.scss
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
-@import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+@import url("https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css");
 
 * {
   z-index: 0;
@@ -9,14 +7,20 @@
 
 .container {
   height: 100vh;
-  margin-top: 15px;
 }
 
+.div_menu_izq, .div_menu_der, #filter_null_izq, #filter_null_der {
+  font-family: "Poppins", sans-serif !important;
+}
+
+/** menu e imagenes a color*/
 .menu {
   display: flex;
   flex-direction: row;
-  margin: 20px 3% 0 3%;
-  height: 65%;
+  margin: 0 3%;
+  height: 75%;
+  position: relative;
+  z-index: 50;
 }
 
 .div__menu {
@@ -26,15 +30,7 @@
   flex-direction: column;
   color: #ffffff;
   font-weight: bold;
-  font-family: 'Poppins', sans-serif;
-}
-
-.div__menu > .div__menu-izq {
-  height: 33%;
-}
-
-.div__menu > .div__menu-der {
-  height: 50%;
+  font-family: "Poppins", sans-serif;
 }
 
 .div__menu > div {
@@ -46,39 +42,94 @@
 }
 
 .div__menu-izq:nth-child(1) {
-  background-color: #febf4e;
+  background-image: url("/assets/img/lugares.jpg");
+  background-size: cover;
+  flex-grow: 1.6;
 }
 
 .div__menu-izq:nth-child(2) {
-  background-color: #68ebff;
+  background-image: url("/assets/img/comer.jpg");
+  background-size: cover;
+  flex-grow: 1;
 }
 
 .div__menu-izq:nth-child(3) {
-  background-color: #fc67ff;
+  background-image: url("/assets/img/artistas.jpg");
+  background-size: cover;
+  flex-grow: 2;
 }
 
 .div__menu-der:nth-child(1) {
-  background-color: #cca5fe;
+  background-image: url("/assets/img/eventos.jpg");
+  background-size: cover;
+  flex-grow: 2;
 }
 
 .div__menu-der:nth-child(2) {
-  background-color: #01dfb8;
+  background-image: url("/assets/img/dormir.jpg");
+  background-size: cover;
   text-align: center;
+  flex-grow: 1;
 }
 
-#filter_null {
-  background-color: #888 !important;
+.div__menu-der:nth-child(3) {
+  background-image: url("/assets/img/casa-dominga.jpg");
+  background-size: cover;
+  text-align: center;
+  flex-grow: 1.5;
+}
+/*****************************************************************/
+
+/** imagenes en blanco y negro*/
+#filter_null_izq:nth-child(1) {
+  background-image: url("/assets/img/lugares-byn.jpg");
+  background-size: cover;
+  flex-grow: 1.6;
 }
 
+#filter_null_izq:nth-child(2) {
+  background-image: url("/assets/img/comer-byn.jpg");
+  background-size: cover;
+  flex-grow: 1;
+}
+
+#filter_null_izq:nth-child(3) {
+  background-image: url("/assets/img/artistas-byn.jpg");
+  background-size: cover;
+  flex-grow: 2;
+}
+
+#filter_null_der:nth-child(1) {
+  background-image: url("/assets/img/eventos-byn.jpg");
+  background-size: cover;
+  flex-grow: 2;
+}
+
+#filter_null_der:nth-child(2) {
+  background-image: url("/assets/img/dormir-byn.jpg");
+  background-size: cover;
+  text-align: center;
+  flex-grow: 1;
+}
+
+#filter_null_der:nth-child(3) {
+  background-image: url("/assets/img/casa-dominga-byn.jpg");
+  background-size: cover;
+  text-align: center;
+  flex-grow: 1.5;
+}
+/************************************************************************/
 .slider_filter {
-  height: 25%;
-}
-
-.slider_filter-filter {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  border-bottom: 1px solid #666666;
+  justify-content: space-between;
+  padding-top: 2%;
+  height: 25%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: #fff;
 }
 
 .option {
@@ -97,7 +148,7 @@
 }
 
 .slider_filter-title {
-  padding: 20px 0 0 20px;
+  padding: 4% 0 0 20px;
 }
 
 span {
@@ -106,16 +157,18 @@ span {
 
 h1,
 span {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 p {
   margin-top: 0 !important;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 h1 {
-  margin-bottom: 12px !important;
+  margin-bottom: 1% !important;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
 }
 
 h1,
@@ -135,9 +188,10 @@ ion-button {
   display: inline-block;
   width: 50%;
   text-align: center;
-  font-family: 'Josefin Sans', sans-serif;
+  font-weight: bold;
+  font-size: 90%;
+  font-family: "Poppins", sans-serif;
   color: #666;
-
 }
 
 .filter_button {
@@ -147,14 +201,15 @@ ion-button {
   margin: auto;
   width: 85%;
   border-radius: 10px;
-  padding: 5px 2.5px 2.5px 2.5px;
+  padding: 1% 2.5px 0.5% 2.5px;
 }
 
 .filter_button > i {
   color: #888;
 }
 
-.depto_selected, .distance_selected {
+.depto_selected,
+.distance_selected {
   color: #01dfb8 !important;
 }
 
@@ -163,7 +218,7 @@ ion-button {
   width: 70%;
   border-bottom-left-radius: 16px !important;
   border-bottom-right-radius: 16px !important;
-  z-index: 50;
+  z-index: 150 !important;
   position: relative;
 }
 
@@ -178,37 +233,10 @@ ion-item {
   height: 40px !important;
 }
 
+ion-text {
+  font-family: "Poppins", sans-serif;
+}
+
 .depto_bold {
   font-weight: bold;
 }
-
-@media (min-width: 320px) {
-  .filter_button {
-    display: flex;
-    flex-direction: row;
-    border: 2px solid #888;
-    margin: auto;
-    width: 85%;
-    border-radius: 10px;
-    margin-top: 6%;
-  }
-}
-
-@media (min-width: 375px) {
-  .filter_button {
-    display: flex;
-    flex-direction: row;
-    border: 2px solid #888;
-    margin: auto;
-    width: 85%;
-    border-radius: 10px;
-    margin-top: 9%;
-  }
-}
-
-@media (max-width: 280px) {
-  .slider_filter-title {
-    padding: 10px 0 0 15px;
-  }
-}
-
