Cambiando minimapa de lugares
- Se crea un componente aparte para el minimapa de lugares,

--- a/src/app/pages/place-selected/place-selected.page.html
+++ b/src/app/pages/place-selected/place-selected.page.html
@@ -79,7 +79,7 @@
       ></p>
     </div>
     <div class="divd">
-      <div id="mapaBox"></div>
+      <app-minimapa [lugarActual]="place"></app-minimapa>
     </div>
     <h6 class="interes">Te puede interesar</h6>
     <div class="divf">
