--- a/src/app/pages/modal-info/modal-info.page.html
+++ b/src/app/pages/modal-info/modal-info.page.html
@@ -22,7 +22,8 @@
 <ion-content>
   <!-- Botones de reproduccion Text To Speech -->
   <!-- <app-text-to-speech [descripcion]="place.descripcion"></app-text-to-speech> -->
-
+<div (click)="convertTextToSpeech(place.descripcion)">Audio</div><br><br>
+<div (click)="stop()">Stop</div>
   <ion-text>
     <div class="texto" [innerHTML]="place.descripcion"></div>
   </ion-text>
