--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -194,7 +194,7 @@
             {{item.fechaInicio | date:'dd.MM.yyyy - HH:mm'}} hs
           </div>
           <div id="filters" class="titulo">{{item.nombre}}</div>
-          <div id="filters" class="descripcion">{{ item.descripcion }}</div>
+          <!-- <div id="filters" class="descripcion">{{ item.descripcion }}</div> -->
           <div id="filters" class="descripcion">
             {{ item.distancia | formatDistancia}}
           </div>
